[gd_scene load_steps=15 format=4 uid="uid://c6xntpvy272xf"]

[ext_resource type="Script" uid="uid://b6chc1em0le62" path="res://scenes/mainmenu.gd" id="1_3vvtq"]
[ext_resource type="Texture2D" uid="uid://bg140y08kxao2" path="res://assets/namemainmeny.png" id="1_5mbse"]
[ext_resource type="TileSet" uid="uid://2npkw8bs4qxy" path="res://assets/groundtileset.tres" id="2_h73c4"]
[ext_resource type="Texture2D" uid="uid://cna2lgm2lwid7" path="res://assets/playnonfocus.png" id="2_r3g3c"]
[ext_resource type="Texture2D" uid="uid://c4c7utxghoylp" path="res://assets/buttons/click.png" id="3_3vvtq"]
[ext_resource type="Texture2D" uid="uid://ddghnil0p4d4j" path="res://assets/playfocus.png" id="5_s5g8n"]
[ext_resource type="Shader" uid="uid://dcfa04cmo5scj" path="res://assets/mainmenu.gdshader" id="6_7yvfd"]
[ext_resource type="Texture2D" uid="uid://baej470v5bi73" path="res://assets/buttons/logoutnonfocus.png" id="7_85riq"]
[ext_resource type="Texture2D" uid="uid://7drsrtfrmb27" path="res://assets/buttons/logoutfocus.png" id="8_wf3n4"]
[ext_resource type="TileSet" uid="uid://c2x8xpb8wub11" path="res://assets/tileset.tres" id="9_wf3n4"]

[sub_resource type="Animation" id="Animation_natt5"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NameContainer/Sprite2D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-1076, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NameContainer/Sprite2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-1242, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/play:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-2000, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/play:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1240, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Control/exit:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-1994, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Control/exit:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1030, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("TileMapLayer:position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("TileMapLayer:position:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Ground:position:x")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Ground:position:y")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(133, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_5mbse"]
resource_name = "popin"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NameContainer/Sprite2D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-1200, -0.25, 0, 0.466667, 33.4999, 970, -0.403843, 2.50037, 0.25, 0),
"times": PackedFloat32Array(0, 0.833333)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NameContainer/Sprite2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-300, -0.25, 0, 0.733333, 9.5, 314.5, -0.299568, 7, 0.25, 0),
"times": PackedFloat32Array(0, 0.833333)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/play:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-2000, -0.25, 0, 0.25, 0, -1450, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.4, 0.839738)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/play:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1350, -0.25, 0, 0.25, 0, 1350, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.839738)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Control/exit:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-1994, -0.25, 0, 0.25, 0, -1450, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.400867, 0.8391)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Control/exit:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1030, -0.25, 0, 0.25, 0, 1030, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.400867, 0.8391)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("TileMapLayer:position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(3926, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.398911, 0.839014)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("TileMapLayer:position:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-2874, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.398911, 0.839014)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Ground:position:x")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(3926, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.398911, 0.839014)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Ground:position:y")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-2741, -0.25, 0, 0.25, 0, 133, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.398911, 0.839014)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_natt5"]
_data = {
&"RESET": SubResource("Animation_natt5"),
&"popin": SubResource("Animation_5mbse")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dfy5j"]
shader = ExtResource("6_7yvfd")
shader_parameter/color_a = Color(0.180392, 0.133333, 0.184314, 1)
shader_parameter/gradient_size = 1.0

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_3vvtq")

[node name="Ground" type="TileMapLayer" parent="."]
position = Vector2(0, 133)
scale = Vector2(15, 15)
tile_map_data = PackedByteArray("AAAGAPv/AQAAAAAAAAAGAPr/AQAAAAAAAAAFAPv/AQAAAAAAAAAFAPr/AQAAAAAAAAAFAPn/AQAAAAAAAAAGAPn/AQAAAAAAAAAHAPn/AQAAAAAAAAAHAPr/AQAAAAAAAAAHAPv/AQAAAAAAAAAFAPf/AQAAAAAAAAAFAPj/AQAAAAAAAAAGAPj/AQAAAAAAAAAHAPj/AQAAAAAAAAAHAPf/AQAAAAAAAAAGAPb/AQAAAAAAAAAFAPb/AQAAAAAAAAAGAPf/AQAAAAAAAAAFAPz/AQAAAAAAAAAFAP3/AQAAAAAAAAAFAP7/AQAAAAAAAAAFAP//AQAAAAAAAAAFAAAAAQAAAAAAAAAFAAEAAQAAAAAAAAAGAAEAAQAAAAAAAAAGAAIAAQAAAAAAAAAHAAIAAQAAAAAAAAAIAAIAAQAAAAAAAAAJAAIAAQAAAAAAAAAJAAEAAQAAAAAAAAAIAAEAAQAAAAAAAAAHAAAAAQAAAAAAAAAHAAEAAQAAAAAAAAAGAAAAAQAAAAAAAAAGAP//AQAAAAAAAAAGAP7/AQAAAAAAAAAHAP7/AQAAAAAAAAAHAP3/AQAAAAAAAAAGAP3/AQAAAAAAAAAGAPz/AQAAAAAAAAAHAPz/AQAAAAAAAAAIAAMAAQAAAAAAAAAJAAMAAQAAAAAAAAAJAAQAAQAAAAAAAAAKAAQAAQAAAAAAAAAKAAMAAQAAAAAAAAAKAAUAAQAAAAAAAAAKAAYAAQAAAAAAAAAJAAUAAQAAAAAAAAAJAAYAAQAAAAAAAAAJAAcAAQAAAAAAAAAJAAgAAQAAAAAAAAAKAAgAAQAAAAAAAAAKAAcAAQAAAAAAAAAKAAkAAQAAAAAAAAAJAAkAAQAAAAAAAAALAAMAAQAAAAAAAAAMAAMAAQAAAAAAAAAMAAIAAQAAAAAAAAALAAIAAQAAAAAAAAANAAMAAQAAAAAAAAAOAAMAAQAAAAAAAAAPAAMAAQAAAAAAAAAPAAIAAQAAAAAAAAAOAAIAAQAAAAAAAAANAAIAAQAAAAAAAAAQAAMAAQAAAAAAAAAQAAIAAQAAAAAAAAAKAAIAAQAAAAAAAAAKAAEAAQAAAAAAAAAKAAAAAQAAAAAAAAAKAP//AQAAAAAAAAAKAP7/AQAAAAAAAAAJAP7/AQAAAAAAAAAJAP3/AQAAAAAAAAAJAP//AQAAAAAAAAAJAAAAAQAAAAAAAAAKAP3/AQAAAAAAAAAKAPz/AQAAAAAAAAAJAPz/AQAAAAAAAAAKAPv/AQAAAAAAAAAKAPr/AQAAAAAAAAAKAPn/AQAAAAAAAAAJAPn/AQAAAAAAAAAJAPr/AQAAAAAAAAAJAPv/AQAAAAAAAAAJAPj/AQAAAAAAAAAJAPf/AQAAAAAAAAAKAPf/AQAAAAAAAAAKAPj/AQAAAAAAAAAKAPb/AQAAAAAAAAAJAPb/AQAAAAAAAAAJAPX/AQAAAAAAAAAKAPX/AQAAAAAAAAA=")
tile_set = ExtResource("2_h73c4")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
scale = Vector2(15, 15)
tile_map_data = PackedByteArray("AAAKAAcAAgAAAAAAAAAKAPz/AgAAAAAAAAAKAP3/AgAAAAAAAAAKAP7/AgAAAAAAAAAKAP//AgAAAAAAAAAKAAAAAgAAAAAAAAAKAAEAAgAAAAAAAAAKAAIAAgAAAAAAAAAKAAMAAgAGAAAAAAAKAAQAAgAAAAAAAAAKAAUAAgAAAAAAAAAKAAYAAgAAAAAAAAAKAAgAAgAAAAAAAAAKAAkAAgAAAAAAAAAKAPf/AgAAAAAAAAAKAPj/AgAAAAAAAAAKAPn/AgAAAAAAAAAKAPr/AgAAAAAAAAAKAPv/AgAAAAAAAAARAAMAAgAAAAYAAAAQAAMAAgAAAAYAAAAPAAMAAgAAAAYAAAAOAAMAAgAAAAYAAAANAAMAAgAAAAYAAAAMAAMAAgAAAAYAAAALAAMAAgAAAAYAAAAJAAMAAgAAAAgAAAAJAAIAAgAAAAwAAAAHAAIAAgAAAAQAAAAIAAIAAgAAAAQAAAAGAAIAAgAAAAgAAAAGAP3/AgAAAAAAAAAGAP7/AgAAAAAAAAAGAP//AgAAAAAAAAAGAAAAAgAAAAAAAAAGAAEAAgAAAAAAAAAGAPj/AgAAAAAAAAAGAPr/AgAAAAAAAAAGAPv/AgAAAAAAAAAGAPz/AgAAAAAAAAAGAPn/AgAAAAAAAAAHAPv/BAACAAAAAAAJAAUABAACAAAAAAAMAAIABAAAAAAAAAA=")
tile_set = ExtResource("9_wf3n4")

[node name="NameContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0

[node name="Sprite2D" type="Sprite2D" parent="NameContainer"]
position = Vector2(-1076, -1242)
scale = Vector2(10, 10)
texture = ExtResource("1_5mbse")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_natt5")
}

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2296.0
offset_top = -1780.0
grow_horizontal = 0
grow_vertical = 0

[node name="LabelCOntainer" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1141.0
offset_top = 590.0
offset_right = 3801.0
offset_bottom = 838.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
material = SubResource("ShaderMaterial_dfy5j")
layout_mode = 0
offset_left = -550.0
offset_top = 1791.0
offset_right = -55.0
offset_bottom = 2433.0
rotation = 3.14159

[node name="ColorRect2" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = -1044.0
offset_top = 1804.0
offset_right = 958.0
offset_bottom = 2446.0
rotation = 3.14159
color = Color(0.180392, 0.133333, 0.184314, 1)

[node name="play" type="TextureButton" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4296.0
offset_top = -430.0
offset_right = -4279.99
offset_bottom = -414.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(20, 21)
texture_normal = ExtResource("2_r3g3c")
texture_pressed = ExtResource("3_3vvtq")
texture_hover = ExtResource("5_s5g8n")

[node name="exit" type="TextureButton" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4290.0
offset_top = -750.0
offset_right = -4274.0
offset_bottom = -734.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(15, 15)
texture_normal = ExtResource("7_85riq")
texture_pressed = ExtResource("3_3vvtq")
texture_hover = ExtResource("8_wf3n4")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="Control/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Control/exit" to="." method="_on_exit_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
